Se agrega ejemplo de pop up sin el uso de JS y pop up con Bootstrap

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<head>
+	<title>Pop ups</title>
+	<!-- Incluya las bibliotecas de Bootstrap y jQuery -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+	<ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="html/pop_up_bootstrap.html">Pop Up con Bootstrap</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"href="html/pop_up_css.html">Popup CSS sin JavaScript</a>
+        </li>        
+      </ul>
+</body>
 </html>
