se agrega ejemplo de modal empleando JS y CSS

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,16 +8,19 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="html/pop_up_bootstrap.html">Pop Up con Bootstrap</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"href="html/pop_up_css.html">Popup CSS sin JavaScript</a>
-        </li>        
-      </ul>
+    <div class="container">
+        <!-- Content here -->
+        <ul class="nav flex-column">           
+            <li class="nav-item">
+              <a class="nav-link" href="html/pop_up_bootstrap.html">Pop Up con Bootstrap</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"href="html/pop_up_css.html">Popup CSS sin JavaScript</a>
+            </li>     
+            <li class="nav-item">
+                <a class="nav-link"href="html/modal_with_js.html">Modal con JavaScript</a>
+            </li>   
+        </ul>
+    </div>	
 </body>
 </html>
